--- a/aula5/Makefile
+++ b/aula5/Makefile
@@ -2,13 +2,14 @@
 # Creative Commons Attribution-Share Alike license (CC BY-SA 2.0).
 # http://creativecommons.org/licenses/by-sa/2.0/
 # Copyright © 2012 Rodrigo Hausen
-NAME=aula2
+NAME=aula5
 SVGS=$(wildcard images/*.svg)
 IMGS=$(SVGS:.svg=.pdf)
 include ../Makefile.inc
 
 $(NAME).pdf: $(NAME).tex $(IMGS)
 	pdflatex $<
+	@if egrep -q '^(.*Rerun .*|No file $(NAME)\.[^.]+\.)$$' $(NAME).log; then pdflatex $<; else echo "done"; fi
 
 clean:
 	rm -f $(NAME).pdf *.aux *.log *.nav *.out *.snm *.toc *.vrb $(NAME)-handout.pdf $(NAME)-handout.tif $(IMGS)
@@ -31,5 +32,5 @@ upload: $(NAME).pdf
 	mkdir tmp/
 	mv $(NAME).pdf tmp/
 	make clean
-	echo 'cd $(DIRREPOS) \n mkdir $(NAME) \n cd $(NAME) \n put tmp/$(NAME).pdf \n put *.tex \n put *.sty \n put Makefile \n mkdir images \n cd images \n put images/* \n cd .. \n quit'|sftp bmrepos
+	echo 'cd $(DIRREPOS) \n mkdir $(NAME) \n cd $(NAME) \n put tmp/$(NAME).pdf \n put *.tex \n put *.sty \n put Makefile \n mkdir images \n cd images \n put images/* \n cd .. \n quit'|sftp $(HOSTREPOS)
 	rm -rf tmp/
