--- a/aula8/Makefile
+++ b/aula8/Makefile
@@ -1,18 +1,26 @@
 # This makefile is available under a
 # Creative Commons Attribution-Share Alike license (CC BY-SA 2.0).
 # http://creativecommons.org/licenses/by-sa/2.0/
-# Copyright © 2013 Rodrigo Hausen
-NAME=aula4
+# Copyright © 2012 Rodrigo Hausen
+NAME=aula8
 SVGS=$(wildcard images/*.svg)
 IMGS=$(SVGS:.svg=.pdf)
 include ../Makefile.inc
+
+all: $(NAME).pdf instrucoes-$(NAME).pdf componentes-simulador.pdf
 
 $(NAME).pdf: $(NAME).tex $(IMGS)
 	pdflatex $<
 	@if egrep -q '^(.*Rerun .*|No file $(NAME)\.[^.]+\.)$$' $(NAME).log; then pdflatex $<; else echo "done"; fi
 
+instrucoes-$(NAME).pdf: instrucoes-$(NAME).odt
+	unoconv -f pdf $<
+
+componentes-simulador.pdf: componentes-simulador.odt
+	unoconv -f pdf $<
+
 clean:
-	rm -f $(NAME).pdf *.aux *.log *.nav *.out *.snm *.toc *.vrb $(NAME)-handout.pdf $(NAME)-handout.tif $(IMGS)
+	rm -f $(NAME).pdf instrucoes-$(NAME).pdf componentes-simulador.pdf *.aux *.log *.nav *.out *.snm *.toc *.vrb $(NAME)-handout.pdf $(NAME)-handout.tif $(IMGS)
 
 images/%.pdf: images/%.svg
 	inkscape -z `pwd`/$< --export-pdf=`pwd`/$@
@@ -32,5 +40,5 @@ upload: $(NAME).pdf
 	mkdir tmp/
 	mv $(NAME).pdf tmp/
 	make clean
-	echo 'cd $(DIRREPOS) \n mkdir $(NAME) \n cd $(NAME) \n put tmp/$(NAME).pdf \n put *.tex \n put *.sty \n put Makefile \n mkdir images \n cd images \n put images/* \n cd .. \n quit'|sftp $(HOSTREPOS)
+	echo 'cd $(DIRREPOS) \n mkdir $(NAME) \n cd $(NAME) \n put tmp/$(NAME).pdf \n put *.tex \n put *.sty \n put Makefile \n put instrucoes-$(NAME).odt \n put instrucoes-$(NAME).pdf \n put componentes-simulador.odt \n put componentes-simulador.pdf \n mkdir images \n cd images \n put images/* \n cd .. \n quit'|sftp $(HOSTREPOS)
 	rm -rf tmp/
